--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="hardware.html">Hardware</a></li>
         <li><a href="htmlcss.html">HTML/CSS</a></li>
         </ul>
-        <h1 align="center" class="head">NRad's Portfolio</h1>
+        <h1 align="center" class="head">Portfolio</h1>
     <h2 align="center" class="head">About Myself</h2> <img id="shasta" src="http://www.summitps.org/uploads/sumhome/summit_home.png">
   <p class="para">I am a 10th grader at Summit Shasta in Daly City. At 5' 5", I play sports and enjoy being active everyday. The only time I have been out of the country was to visit my mom's family in Australia, but other than that, I have only traveled from state to state playing in basketball tournaments. However, I have not been as active as I normally due to breaking two bones my leg during a basketball tournament and receiving surgery. So, I now have one big nail in the middle of my tibia and 3 screws that keep it there. Besides basketball, I also make sure to maintain good grades in school. My teammates would describe me as an underrrated guard because they say that although I am short, I still prove that I can stay up with all the other high school players. On the other hand, in school my peers and teachers would describe me as a hardworking, athletic, intelligent nerd.
     </p>
