--- a/hardware.html
+++ b/hardware.html
@@ -3,16 +3,34 @@
     <style>
         body{background-color:yellow};
         p{font-size:17px;}
+         #tableofcontents{position:fixed;
+               margin-left:15px;
+         float:right;
+         right:100px;
+         }
     </style>
     <head>
         <title> </title>
     </head>
     <body>
-        <ul id="navbar">
-           <li><a href="index.html">Home</a></li>
-        <li><a href="hardware.html">Hardware</a></li>
-        <li><a href="htmlcss.html">HTML/CSS</a></li>
-        </ul>
+          <table align="right" id="tableofcontents">
+            <thead>
+                <tr>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><a href="index.html">Who I am</a></td>
+                </tr>
+                <tr>
+                    <td><a href="hardware.html">Hardware</a></td>
+                </tr>
+                <tr>
+                    <td><a href="htmlcss.html">HTML & CSS</a></td>
+                </tr>
+            </tbody>
+            </table>
     <h2 class="head" align="center">Computer hardware</h2>
     <p class="para">*insert stuff about the hardware here*</p>
     </body>
