--- a/htmlcss.html
+++ b/htmlcss.html
@@ -48,7 +48,7 @@
             </tbody>
             </table>
         <div id="divfortableofcontents">
-            <h1 align="center"><em>About HTML & CSS</em></h1><h2 align="center">HTML and CSS</h2>
+            <h1 align="center"><em>About HTML & CSS</em></h1>
 <h3 class="head" align="center">HTML</h3> <img id="shasta" src="https://marycsheehan.files.wordpress.com/2013/11/html2.jpg">
     <p class="para">HTML stands for HyperText Markup Language and 
     it is a series of short codes made in a text file by a person 
@@ -129,7 +129,7 @@
     enable the website to realize that any code in that tag will 
     be used to "style" the page. So, let's say you want to color 
     the whole background of the page. In the style tag you would 
-    need to use the code body{background-color:(rgb or basic color)}.
+    need to use the code body &lt;background-color:rgb(value of red, green, and blue)&gt;.
     This code says to make the background color of the whole body, or 
     the whole page, a certain color. The reason we have either rgb or 
     basic color there is because if you want a basic, common color such
