--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   maintain good grades in school. My teammates would describe me 
   as an underrrated guard because they say that although I am 
   short, I still prove that I can stay up with all the other high 
-  school players. On the other hand, in school my peers and teachers
+  school players. Anyways, in school my peers and teachers
   would describe me as a hardworking, athletic, intelligent nerd.
     </p>
     <h2 align="center" class="head">Favorites</h2> <img id="shasta" src="https://lh5.googleusercontent.com/-DJ_I7MDOngg/U-bwC0Cf4EI/AAAAAAAABFQ/1LrFeDTS91U/s640/blogger-image-680497306.jpg">
