--- a/htmlcss.html
+++ b/htmlcss.html
@@ -32,7 +32,7 @@
         <title> </title>
     </head>
     <body>
-         <table id="tableofcontents" align="center">
+                 <table id="tableofcontents">
             <thead>
                 <tr>
                     <th>Parts of Website</th>
@@ -45,8 +45,14 @@
                 <tr>
                     <td><a href="htmlcss.html">HTML & CSS</a></td>
                 </tr>
+                <tr>
+                    <td><a href="infosite.html">Learn About the Warriors</a></td>
+                </tr>
+                <tr>
+                    <td><a href="calc.html">Calculator</a></td>
+                </tr>
             </tbody>
-            </table>
+        </table>
         <div id="divfortableofcontents">
             <h1 align="center"><em>About HTML & CSS</em></h1>
 <h3 class="head" align="center">HTML</h3> <img id="shasta" src="https://marycsheehan.files.wordpress.com/2013/11/html2.jpg">
