--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
                 <tr>
                     <td><a href="htmlcss.html">HTML & CSS</a></td>
                 </tr>
+                <tr>
+                    <td><a href="infosite.html">Learn About the Warriors</a></td>
+                </tr>
+                <tr>
+                    <td><a href="calc.html">Calculator</a></td>
+                </tr>
             </tbody>
         </table>
        <div id="divfortableofcontents"><h1 align="center" class="head"><em>Portfolio</em></h1>
