tic tac toe themes

--- a/calc.html
+++ b/calc.html
@@ -40,7 +40,7 @@
 	<title>Swaggy Calc</title>
 </head>
 <body>
-            <table id="tableofcontents">
+        <table id="tableofcontents">
             <thead>
                 <tr>
                     <th>Parts of Website</th>
@@ -58,6 +58,9 @@
                 </tr>
                 <tr>
                     <td><a href="calc.html">Calculator</a></td>
+                </tr>
+                <tr>
+                    <td><a href="tictactoe.html">Tic Tac Toe</a></td>
                 </tr>
             </tbody>
         </table>
