--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                 <tr>
                     <td><a href="calc.html">Calculator</a></td>
                 </tr>
+                <tr>
+                    <td><a href="tictactoe.html">Tic Tac Toe</a></td>
+                </tr>
             </tbody>
         </table>
        <div id="divfortableofcontents"><h1 align="center" class="head"><em>Portfolio</em></h1>
