--- a/infosite.html
+++ b/infosite.html
@@ -55,7 +55,7 @@
     <title>InfoSite</title>
 </head>
 <body>
-            <table id="tableofcontents">
+        <table id="tableofcontents">
             <thead>
                 <tr>
                     <th>Parts of Website</th>
@@ -73,6 +73,9 @@
                 </tr>
                 <tr>
                     <td><a href="calc.html">Calculator</a></td>
+                </tr>
+                <tr>
+                    <td><a href="tictactoe.html">Tic Tac Toe</a></td>
                 </tr>
             </tbody>
         </table>
