--- a/emoticonstictactoe.html
+++ b/emoticonstictactoe.html
@@ -17,13 +17,13 @@
         }
         </style>
         <script>
-            function startGame() {
+            function startGame() { //all javascript is the same but the only difference is the symbol changes to match the tic tac toe theme
                 
                 for (var i = 1; i <= 9; i = i + 1) {
                     clearBox(i);
                 }
                 
-    document.turn = "=)";
+    document.turn = "=)"; //X's changed to =) and O's changed to =( so that it can match the theme of the page
     if (Math.random() < 0.5){
         document.turn = "=(";
     }
