--- a/spongetictactoe.html
+++ b/spongetictactoe.html
@@ -20,13 +20,13 @@
         }
         </style>
         <script>
-            function startGame() {
+            function startGame() { //all javascript is the same but the only difference is the symbol changes to match the tic tac toe theme
                 
                 for (var i = 1; i <= 9; i = i + 1) {
                     clearBox(i);
                 }
                 
-    document.turn = "CB"
+    document.turn = "CB" //X's changed to CB and O's changed to KK so that it can match the theme of the page
     if (Math.random() < 0.5){
         document.turn = "KK";
     }
