--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
                 <tr>
                     <td><a href="tictactoe.html">Tic Tac Toe</a></td>
                 </tr>
+                                <tr>
+                    <td><a href="Vindinium.html">Vindinium Info</a>
+                    </td>
+                </tr>
             </tbody>
         </table>
        <div id="divfortableofcontents"><h1 align="center" class="head"><em>Portfolio</em></h1>
