--- a/tictactoe.html
+++ b/tictactoe.html
@@ -110,6 +110,10 @@ function clearBox(number) { //this clears the boxes to start the game over
                 <tr>
                     <td><a href="tictactoe.html">Tic Tac Toe</a></td>
                 </tr>
+                                <tr>
+                    <td><a href="Vindinium.html">Vindinium Info</a>
+                    </td>
+                </tr>
             </tbody>
         </table>
         <h1 align="center">Welcome to Tic Tac Toe!</h1>
