--- a/infosite.html
+++ b/infosite.html
@@ -77,6 +77,10 @@
                 <tr>
                     <td><a href="tictactoe.html">Tic Tac Toe</a></td>
                 </tr>
+                <tr>
+                    <td><a href="Vindinium.html">Vindinium Info</a>
+                    </td>
+                </tr>
             </tbody>
         </table>
     <h1 id=warriors>Golden State Warriors InfoSite</h1>
