--- a/Modeling.html
+++ b/Modeling.html
@@ -27,6 +27,11 @@
             left:510px;
             font-size:18pt;
             }
+            #tableofcontents{position:fixed;
+        margin-left:15px;
+        float:right;
+        right:100px;
+    }
         </style>
         <script>
             function myTop() {document.getElementById("top").innerHTML = "This top screw in my leg that you can see in my x-ray is actually visible on my leg and you can actually feel it pretty clearly if you touched my leg. The purpose of this screw is to hold the big, long nail in my tibia bone in place and keeps it stable. Without it, the top part of the nail would not have the support need while my bone was forming back. This means that without the screw there, the nail would flop around in the bone and would damage the bone or not allow the bone to fully develop back. The reason for only one at the top is because as you can see, the size of the screw at the top is bigger than the size of the bottom two screws. They all have the same role, but the top is bigger since there is only one stabilizing that part of the nail, and since that top part of the tibia is larger than the bottom.";}
@@ -37,6 +42,37 @@
         <title>Broken Leg</title>
     </head>
     <body>
+                        <table id="tableofcontents">
+            <thead>
+                <tr>
+                    <th>Parts of Website</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><a href="index.html">Who I am</a></td>
+                </tr>
+                <tr>
+                    <td><a href="htmlcss.html">HTML & CSS</a></td>
+                </tr>
+                <tr>
+                    <td><a href="infosite.html">Learn About the Warriors</a></td>
+                </tr>
+                <tr>
+                    <td><a href="calc.html">Calculator</a></td>
+                </tr>
+                <tr>
+                    <td><a href="tictactoe.html">Tic Tac Toe</a></td>
+                </tr>
+                <tr>
+                    <td><a href="Vindinium.html">Vindinium Info</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td><a href="Modeling.html">Broken Leg Model</a></td>
+                </tr>
+            </tbody>
+        </table>
         <h1 align="center">Model of My Broken Leg</h1>
         <button id="topscrew" onclick="myTop()">Top Screw</button>
         <button id="bottomscrew" onclick="myBottom()">Bot Screws</button>
