--- a/Vindinium.html
+++ b/Vindinium.html
@@ -16,7 +16,7 @@ width:500px;
         <title>Vindinium</title>
     </head>
     <body>
-         <table id="tableofcontents">
+                                      <table id="tableofcontents">
             <thead>
                 <tr>
                     <th>Parts of Website</th>
@@ -37,6 +37,13 @@ width:500px;
                 </tr>
                 <tr>
                     <td><a href="tictactoe.html">Tic Tac Toe</a></td>
+                </tr>
+                <tr>
+                    <td><a href="Vindinium.html">Vindinium Info</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td><a href="Modeling.html">Broken Leg Model</a></td>
                 </tr>
             </tbody>
         </table>
