--- a/tictactoe.html
+++ b/tictactoe.html
@@ -88,7 +88,7 @@ function clearBox(number) { //this clears the boxes to start the game over
     </head>
     
     <body onload="startGame();">
-                <table id="tableofcontents">
+                                        <table id="tableofcontents">
             <thead>
                 <tr>
                     <th>Parts of Website</th>
@@ -110,9 +110,12 @@ function clearBox(number) { //this clears the boxes to start the game over
                 <tr>
                     <td><a href="tictactoe.html">Tic Tac Toe</a></td>
                 </tr>
-                                <tr>
+                <tr>
                     <td><a href="Vindinium.html">Vindinium Info</a>
                     </td>
+                </tr>
+                <tr>
+                    <td><a href="Modeling.html">Broken Leg Model</a></td>
                 </tr>
             </tbody>
         </table>
