--- a/calc.html
+++ b/calc.html
@@ -40,7 +40,7 @@
 	<title>Swaggy Calc</title>
 </head>
 <body>
-        <table id="tableofcontents">
+                               <table id="tableofcontents">
             <thead>
                 <tr>
                     <th>Parts of Website</th>
@@ -61,6 +61,13 @@
                 </tr>
                 <tr>
                     <td><a href="tictactoe.html">Tic Tac Toe</a></td>
+                </tr>
+                <tr>
+                    <td><a href="Vindinium.html">Vindinium Info</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td><a href="Modeling.html">Broken Leg Model</a></td>
                 </tr>
             </tbody>
         </table>
