--- a/htmlcss.html
+++ b/htmlcss.html
@@ -32,7 +32,7 @@
         <title> </title>
     </head>
     <body>
-                 <table id="tableofcontents">
+                        <table id="tableofcontents">
             <thead>
                 <tr>
                     <th>Parts of Website</th>
@@ -50,6 +50,16 @@
                 </tr>
                 <tr>
                     <td><a href="calc.html">Calculator</a></td>
+                </tr>
+                <tr>
+                    <td><a href="tictactoe.html">Tic Tac Toe</a></td>
+                </tr>
+                <tr>
+                    <td><a href="Vindinium.html">Vindinium Info</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td><a href="Modeling.html">Broken Leg Model</a></td>
                 </tr>
             </tbody>
         </table>
