--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <title></title>
     </head>
     <body>
-        <table id="tableofcontents">
+                               <table id="tableofcontents">
             <thead>
                 <tr>
                     <th>Parts of Website</th>
@@ -52,9 +52,12 @@
                 <tr>
                     <td><a href="tictactoe.html">Tic Tac Toe</a></td>
                 </tr>
-                                <tr>
+                <tr>
                     <td><a href="Vindinium.html">Vindinium Info</a>
                     </td>
+                </tr>
+                <tr>
+                    <td><a href="Modeling.html">Broken Leg Model</a></td>
                 </tr>
             </tbody>
         </table>
