--- a/Modeling.html
+++ b/Modeling.html
@@ -32,6 +32,11 @@
         float:right;
         right:100px;
     }
+    #again{position:absolute;
+    left:90%;
+    bottom:90%;
+        font-size:16pt;
+    }
         </style>
         <script>
             function myTop() {document.getElementById("top").innerHTML = "This top screw in my leg that you can see in my x-ray is actually visible on my leg and you can actually feel it pretty clearly if you touched my leg. The purpose of this screw is to hold the big, long nail in my tibia bone in place and keeps it stable. Without it, the top part of the nail would not have the support need while my bone was forming back. This means that without the screw there, the nail would flop around in the bone and would damage the bone or not allow the bone to fully develop back. The reason for only one at the top is because as you can see, the size of the screw at the top is bigger than the size of the bottom two screws. They all have the same role, but the top is bigger since there is only one stabilizing that part of the nail, and since that top part of the tibia is larger than the bottom.";}
@@ -39,40 +44,9 @@
             function myBig() {document.getElementById("top").innerHTML = "The big nail in the middle of my tibia was what kept the bone straight and in place while it was recovering and growing back. It's role in my leg is a big part because not only did it allow my bone to grow back, but now it helps my bone become even more stable and makes it close to impossible to break my right leg again. This nail is all titanium so it is strong and is hard to bend which makes my bone only able to fracture. Additionally, since this nail is titanium, temperature also affects my leg. The colder it is, the more tense my right leg becomes compared to my left leg because the nail absorbs the cold to my bone and then spreads to my muscles. In contrast, when the temperature is hot, my right leg feels as if it was burning because of the heat being absorbed by the titanium, similar to if the temperature was cold.";}
             function myBreak() {document.getElementById("top").innerHTML = "As you can see in my x-ray, there is a part in my tibia bone that looks bigger the the rest of it. This is exactly where the break of my leg was located. Since it broke in that spot, the bone grew back stronger and bigger since I would drink calcium heavy products each day. These foods and drinks helped calcify my bone which not only helped make it stronger and bigger, but also allowed for me to recover quicker than others. This stronger,  calcified bone has allowed for my leg to withstand certain impacts better than it usually would and I can definitely feel the difference between my bone before I broke it and after.";}
         </script>
-        <title>Broken Leg</title>
+        <title>Robot Leg</title>
     </head>
     <body>
-                        <table id="tableofcontents">
-            <thead>
-                <tr>
-                    <th>Parts of Website</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td><a href="index.html">Who I am</a></td>
-                </tr>
-                <tr>
-                    <td><a href="htmlcss.html">HTML & CSS</a></td>
-                </tr>
-                <tr>
-                    <td><a href="infosite.html">Learn About the Warriors</a></td>
-                </tr>
-                <tr>
-                    <td><a href="calc.html">Calculator</a></td>
-                </tr>
-                <tr>
-                    <td><a href="tictactoe.html">Tic Tac Toe</a></td>
-                </tr>
-                <tr>
-                    <td><a href="Vindinium.html">Vindinium Info</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td><a href="Modeling.html">Broken Leg Model</a></td>
-                </tr>
-            </tbody>
-        </table>
         <h1 align="center">Model of My Broken Leg</h1>
         <button id="topscrew" onclick="myTop()">Top Screw</button>
         <button id="bottomscrew" onclick="myBottom()">Bot Screws</button>
@@ -80,5 +54,6 @@
         <button id="tbreak" onclick="myBreak()">Break In Tibia</button>
         <img id="xray" src="http://i.imgur.com/NzABVFl.jpg">
         <p id="top"></p>
+        <a id="again" href="Broken.html">Break My Leg Again</a>
     </body>
 </html>
