--- a/Vindinium.html
+++ b/Vindinium.html
@@ -43,7 +43,7 @@ width:500px;
                     </td>
                 </tr>
                 <tr>
-                    <td><a href="Modeling.html">Broken Leg Model</a></td>
+                    <td><a href="Broken.html">Broken Leg Model</a></td>
                 </tr>
             </tbody>
         </table>
