--- a/infosite.html
+++ b/infosite.html
@@ -87,7 +87,7 @@
                     </td>
                 </tr>
                 <tr>
-                    <td><a href="Modeling.html">Broken Leg Model</a></td>
+                    <td><a href="Broken.html">Broken Leg Model</a></td>
                 </tr>
             </tbody>
         </table>
