--- a/tictactoe.html
+++ b/tictactoe.html
@@ -115,7 +115,7 @@ function clearBox(number) { //this clears the boxes to start the game over
                     </td>
                 </tr>
                 <tr>
-                    <td><a href="Modeling.html">Broken Leg Model</a></td>
+                    <td><a href="Broken.html">Broken Leg Model</a></td>
                 </tr>
             </tbody>
         </table>
